--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@ ul {
 /* Info */
 
 .info {
-  height: 400px;
+  height: 450px;
 }
 
 .info .info-img_div {
@@ -194,7 +194,7 @@ ul {
 /* Testimonials */
 
 .testimonials {
-  height: 600px;
+  height: 100%;
   background: url('../images/test-bg.jpeg') no-repeat center center/cover;
   padding-top: 100px;
 }
